--- a/src/app.html
+++ b/src/app.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/logo.png" />
-		
+		<meta name="description" content="EL Ambrosia Authentic Shawarma">
 		<meta name="viewport" content="width=device-width" />
 		<link rel="manifest" href="%sveltekit.assets%/manifest.json" />
 		<link rel="apple-touch-icon" href="icons/apple-icon-180.png" />
