--- a/src/app.html
+++ b/src/app.html
@@ -151,7 +151,7 @@
 			html,
 			body {
 				height: 100%;
-				background-color: black;
+				background-color: transparent;
 			}
 		</style>
 	</head>
