--- a/src/app.html
+++ b/src/app.html
@@ -2,7 +2,7 @@
 <html lang="en" data-theme="luxury" class="scroll-smooth">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/logo.png" />
+		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="description" content="EL Ambrosia Authentic Shawarma">
 		<meta name="viewport" content="width=device-width" />
 		<link rel="manifest" href="%sveltekit.assets%/manifest.json" />
