--- a/src/app.html
+++ b/src/app.html
@@ -164,14 +164,15 @@
 		/>
 		%sveltekit.head%
 		<style>
-			html,
-			body {
+			/* html,
+			body,
+			#svelte-body {
 				height: 100%;
 				background-color: transparent;
-			}
+			} */
 		</style>
 	</head>
 	<body>
-		<div style="display: contents">%sveltekit.body%</div>
+		<div id="svelte-body" style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
